// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component snapshot matches snapshot with title and children 1`] = `
<DocumentFragment>
  <div
    class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition duration-300 "
  >
    <h2
      class="text-xl font-semibold mb-4"
    >
      Test Title
    </h2>
    <div
      class="text-gray-700"
    >
      <p>
        Body content
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card component snapshot matches snapshot without title 1`] = `
<DocumentFragment>
  <div
    class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition duration-300 "
  >
    <div
      class="text-gray-700"
    >
      <span>
        No title body
      </span>
    </div>
  </div>
</DocumentFragment>
`;
